firebase fixes